--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 3131 --routes routes.json"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build && npm run copy-db",
+  "copy-db": "cpx db.json build/db/app.json",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "server": "json-server --watch db.json --port 3131 --routes routes.json"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
